--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Titulo</h1>
-    <p>Esto es un parrafo</p>
+    <p>Esto es un párrafo desde github</p>
+    <p>Esto es un párrafo desde Visual Studio</p>
     
 </body>
 </html>
